[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-flow"
version = "0.0.1"
authors = [
  { name="Rahmat", email="rahmat.ansari.dev@gmail.com" },
]
description = "A faster way to work with Git."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]",
    "questionary",
]

[project.scripts]
gf = "git_flow.main:app"
